--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
-	<head>
+  <head>
     <!-- site meta
     ========================================================================= -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- site title
     ========================================================================== -->
@@ -12,251 +12,265 @@
 
     <!-- site favicon
     ========================================================================== -->
-    <link rel="icon" type="image/x-icon" href="media/siteIcon.ico">
+    <link rel="icon" type="image/x-icon" href="media/siteIcon.ico" />
 
     <!-- custom style sheet
     =========================================================================== -->
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
   </head>
-<body>
-
-	<!-- page Loader 
+  <body>
+    <!-- page Loader 
 	============================================================================-->
-	<div id="preloader">
-	    <div id="loader" class="dots-fade">
-	      	<div></div>
-	      	<div></div>
-	      	<div></div>
-	    </div>
-	</div>
-
+    <div id="preloader">
+      <div id="loader" class="dots-fade">
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+    </div>
 
     <!-- Page Content -->
-	<div class="content">
-		<!-- navbar
+    <div class="content">
+      <!-- navbar
 		======================================================================= -->
-	    <header class="navbar">
-		    <div class="container">
-		    	<div class="navbar_box">
-		    		<div class="logo">
-			    		<img src="media/M+Perks-Logo.png" width="274" height="54" align="logo">
-			    	</div>
+      <header class="navbar">
+        <div class="container">
+          <div class="navbar_box">
+            <div class="logo">
+              <img
+                src="media/M+Perks-Logo.png"
+                width="274"
+                height="54"
+                align="logo" />
+            </div>
 
-				    <!-- Checkbox toggle -->
-				    <input type="checkbox" id="menu-toggle" class="menu-toggle" />
+            <!-- Checkbox toggle -->
+            <input type="checkbox" id="menu-toggle" class="menu-toggle" />
 
-				    <!-- Hamburger icon -->
-				    <label for="menu-toggle" class="menu-icon">
-				      <span></span>
-				      <span></span>
-				      <span></span>
-				    </label>
+            <!-- Hamburger icon -->
+            <label for="menu-toggle" class="menu-icon">
+              <span></span>
+              <span></span>
+              <span></span>
+            </label>
 
-				    <!-- Navigation links -->
-				    <nav class="menu">
-				      <a href="#">MONTHLY GIVEAWAY</a>
-				      <a href="#">GAMES OF THE MONTH</a>
-				      <a href="#">ADDITIONAL PERKS</a>
-				      <a href="#">Ultimate Fan Experiences</a>
-				    </nav>
-		    	</div>
-		    </div>
-	    </header>
+            <!-- Navigation links -->
+            <nav class="menu">
+              <a href="#">MONTHLY GIVEAWAY</a>
+              <a href="#">GAMES OF THE MONTH</a>
+              <a href="#">ADDITIONAL PERKS</a>
+              <a href="#">Ultimate Fan Experiences</a>
+            </nav>
+          </div>
+        </div>
+      </header>
 
-
-	    <!-- banner
+      <!-- banner
 	    ======================================================================= -->
-	    <section class="banner">
-	    	<div class="container">
-	    		<div class="banner_box">
-	    			<h1 class="">
-	    				Welcome! Unlock Your Exclusive Monumental +Perks
-	    			</h1>
-	    		</div>
-	    	</div>
-	    </section>
+      <section class="banner">
+        <div class="container">
+          <div class="banner_box">
+            <h1 class=""> Welcome! Unlock Your Exclusive Monumental +Perks </h1>
+          </div>
+        </div>
+      </section>
 
-
-	    <!-- SEPTEMBER SWAG BAG
+      <!-- SEPTEMBER SWAG BAG
 	    ====================================================================== -->
-	    <section class="swag_bag">
-	    	<div class="container">
-	    		<div>
-	    			<div>
-	    				<h2 class="heading_2"> 
-	    					SEPTEMBER SWAG BAG
-	    				</h2>
-	    			</div>
-	    			<div class="swag_bag_grid">
-		    			<div class="swag_bag_data_wrapper">
-		    				<ul>
-		    					<li>
-		    						Signed Ovechkin Jersey
-		    					</li>
-		    					<li>
-		    						Capitals Swag Item 01
-		    					</li>
-		    					<li>
-		    						Capitals Swag Item 02
-		    					</li>
-		    				</ul> 
-		    				<div class="swag_bag_btn_box">
-		    					<button class="btn btn_theme_danger_large">
-		    						Enter for Your Chance to Win
-		    					</button>
-		    				</div>
-		    			</div>
-		    			<div class="swag_bag_img_wrapper">
-		    				<div class="swag_bag_image_box">
-		    					<img src="media/Ovi.webp" width="274" height="364" alt="ovi image" >
-		    					<img src="media/Ovi-Jersey.webp" width="243" height="243" alt="Ovi-Jersey" class="Ovi-Jersey" />
-		    				</div>
-		    				
-		    			</div>
-		    		</div>
-	    		</div>
-	    	</div>
-	    </section>
+      <section class="swag_bag">
+        <div class="container">
+          <div>
+            <div>
+              <h2 class="heading_2"> SEPTEMBER SWAG BAG </h2>
+            </div>
+            <div class="swag_bag_grid">
+              <div class="swag_bag_data_wrapper">
+                <ul>
+                  <li> Signed Ovechkin Jersey </li>
+                  <li> Capitals Swag Item 01 </li>
+                  <li> Capitals Swag Item 02 </li>
+                </ul>
+                <div class="swag_bag_btn_box">
+                  <button class="btn btn_theme_danger_large">
+                    Enter for Your Chance to Win
+                  </button>
+                </div>
+              </div>
+              <div class="swag_bag_img_wrapper">
+                <div class="swag_bag_image_box">
+                  <img
+                    src="media/Ovi.webp"
+                    width="274"
+                    height="364"
+                    alt="ovi image" />
+                  <img
+                    src="media/Ovi-Jersey.webp"
+                    width="243"
+                    height="243"
+                    alt="Ovi-Jersey"
+                    class="Ovi-Jersey" />
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
 
-	    <!-- game_of_month section
+      <!-- game_of_month section
 	    ====================================================================== -->
-	    <section class="game_of_month">
-	    	<div class="bg">
-	    		<div class="container">
-	    		<div>
-	    			<div class="scroll-wrapper">
-					  <div class="scroll-container">
-					  	<!-- first box -->
-					    <div class="scroll_box scroll_box_first">
-					      <div class="game_of_month_box">
-					      	<div class="game_of_month_box_image_box">
-					      		<img src="media/capitals_img.webp" width="549" height="489" alt="capitals_img" class="game_of_month_box_img">
-					      	</div>
-					      	<div class="game_of_month_box_data_box">
-					      		<span class="mobile_game_of_month_heading">
-					      			capitals
-					      		</span>
-					      		<h2>
-					      			GAME OF THE MONTH
-					      		</h2>
-					      		<p>
-					      			October: 20% off Tickets to Home Game vs the New York Islanders
-					      		</p>
-					      		<div class="img_griup">
-					      			<img src="media/CAPS.webp" width="316" height="96" alt="CAPS">
-					      			<img src="media/OPPONENT.webp" width="316" height="96" alt="OPPONENT">
-					      		</div>
-					      		<div>
-					      			<span class="dateTime">
-					      			Friday, October 31, 2025 <br> <span> PUCK DROP // 7 PM ET</span>
-					      			</span>
-					      		</div>
-					      		<div class="btn_group">
-					      			<button class="btn btn_theme_danger_small">
-					      				Get Tickets Now
-					      			</button>
-					      			<button class="btn btn_theme_white_small">
-					      				DISCOUNT CODE: <span>MSN20</span>
-					      			</button>
-					      		</div>
-					      	</div>
-					      </div>
-					      <span class="game_of_month_box_heading">
-					      	capitals
-					      </span>
-					    </div>
-					    <!-- Second box -->
-					    <div class="scroll_box scroll_box_second">
-					      <div class="" >
-					      	<h2 class="heading_2">
-					      		GAMES OF THE MONTH
-					      	</h2>
-					      	<p>
-					      		Follow the link to a full season lineup of upcoming Games of the Month!
-					      	</p>
-					      	<button class="btn btn_theme_danger_small">
-					      		See Schedule
-					      	</button>
-					      </div>
-					    </div>
-					  </div>
-					</div>
-	    		</div>
-	    	</div>
-	    	</div>
-	    </section>
+      <section class="game_of_month">
+        <div class="bg">
+          <div class="container">
+            <div>
+              <div class="scroll-wrapper">
+                <div class="scroll-container">
+                  <!-- first box -->
+                  <div class="scroll_box scroll_box_first">
+                    <div class="game_of_month_box">
+                      <div class="game_of_month_box_image_box">
+                        <img
+                          src="media/capitals_img.webp"
+                          width="549"
+                          height="489"
+                          alt="capitals_img"
+                          class="game_of_month_box_img" />
+                      </div>
+                      <div class="game_of_month_box_data_box">
+                        <span class="mobile_game_of_month_heading">
+                          capitals
+                        </span>
+                        <h2> GAME OF THE MONTH </h2>
+                        <p>
+                          October: 20% off Tickets to Home Game vs the New York
+                          Islanders
+                        </p>
+                        <div class="img_griup">
+                          <img
+                            src="media/CAPS.webp"
+                            width="316"
+                            height="96"
+                            alt="CAPS" />
+                          <img
+                            src="media/OPPONENT.webp"
+                            width="316"
+                            height="96"
+                            alt="OPPONENT" />
+                        </div>
+                        <div>
+                          <span class="dateTime">
+                            Friday, October 31, 2025 <br />
+                            <span> PUCK DROP // 7 PM ET</span>
+                          </span>
+                        </div>
+                        <div class="btn_group">
+                          <button class="btn btn_theme_danger_small">
+                            Get Tickets Now
+                          </button>
+                          <button class="btn btn_theme_white_small">
+                            DISCOUNT CODE: <span>MSN20</span>
+                          </button>
+                        </div>
+                      </div>
+                    </div>
+                    <span class="game_of_month_box_heading"> capitals </span>
+                  </div>
+                  <!-- Second box -->
+                  <div class="scroll_box scroll_box_second">
+                    <div class="">
+                      <h2 class="heading_2"> GAMES OF THE MONTH </h2>
+                      <p>
+                        Follow the link to a full season lineup of upcoming
+                        Games of the Month!
+                      </p>
+                      <button class="btn btn_theme_danger_small">
+                        See Schedule
+                      </button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
 
-	    <!-- game_of_month section
+      <!-- game_of_month section
 	    ====================================================================== -->
-	    <section class="game_of_month game_of_month2">
-	    	<div class="bg">
-	    		<div class="container">
-	    		<div>
-	    			<div class="scroll-wrapper">
-					  <div class="scroll-container">
-					  	<!-- first box -->
-					    <div class="scroll_box scroll_box_first scroll_box_first2">
-					      <div class="game_of_month_box">
-					      	<div class="game_of_month_box_data_box">
-					      		<span class="mobile_game_of_month_heading">
-					      			wizards
-					      		</span>
-					      		<h2>
-					      			GAME OF THE MONTH
-					      		</h2>
-					      		<p>
-					      			October: 20% off Tickets to Wizards’ Home Game vs the Charlotte Hornets
-					      		</p>
-					      		<div class="img_griup">
-					      			<img src="media/wiz.webp" width="316" height="96" alt="wiz">
-					      			<img src="media/knicks.webp" width="316" height="96" alt="knicks">
-					      		</div>
-					      		<div>
-					      			<span class="dateTime">
-					      			Sunday, October 26, 2025 <br> <span> TIP-OFF // 6 PM ET</span>
-					      			</span>
-					      		</div>
-					      		<div class="btn_group">
-					      			<button class="btn btn_theme_danger_small">
-					      				Get Tickets Now
-					      			</button>
-					      			<button class="btn btn_theme_white_small">
-					      				DISCOUNT CODE: <span>MSN20</span>
-					      			</button>
-					      		</div>
-					      	</div>
-					      	<div class="game_of_month_box_image_box">
-					      		<img src="media/capitals_img.webp" width="549" height="489" alt="capitals_img" class="game_of_month_box_img">
-					      	</div>
-					      </div>
-					      <span class="game_of_month_box_heading2">
-					      	wizards
-					      </span>
-					    </div>
-					    <!-- Second box -->
-					    <div class="scroll_box scroll_box_second">
-					      <div class="" >
-					      	<h2 class="heading_2">
-					      		GAMES OF THE MONTH
-					      	</h2>
-					      	<p>
-					      		Follow the link to a full season lineup of upcoming Games of the Month!
-					      	</p>
-					      	<button class="btn btn_theme_danger_small">
-					      		See Schedule
-					      	</button>
-					      </div>
-					    </div>
-					  </div>
-					</div>
-	    		</div>
-	    	</div>
-	    	</div>
-	    </section>
-	</div>
-	
-
-
-</body>
+      <section class="game_of_month game_of_month2">
+        <div class="bg">
+          <div class="container">
+            <div>
+              <div class="scroll-wrapper">
+                <div class="scroll-container">
+                  <!-- first box -->
+                  <div class="scroll_box scroll_box_first scroll_box_first2">
+                    <div class="game_of_month_box">
+                      <div class="game_of_month_box_data_box">
+                        <span class="mobile_game_of_month_heading">
+                          wizards
+                        </span>
+                        <h2> GAME OF THE MONTH </h2>
+                        <p>
+                          October: 20% off Tickets to Wizards’ Home Game vs the
+                          Charlotte Hornets
+                        </p>
+                        <div class="img_griup">
+                          <img
+                            src="media/wiz.webp"
+                            width="316"
+                            height="96"
+                            alt="wiz" />
+                          <img
+                            src="media/knicks.webp"
+                            width="316"
+                            height="96"
+                            alt="knicks" />
+                        </div>
+                        <div>
+                          <span class="dateTime">
+                            Sunday, October 26, 2025 <br />
+                            <span> TIP-OFF // 6 PM ET</span>
+                          </span>
+                        </div>
+                        <div class="btn_group">
+                          <button class="btn btn_theme_danger_small">
+                            Get Tickets Now
+                          </button>
+                          <button class="btn btn_theme_white_small">
+                            DISCOUNT CODE: <span>MSN20</span>
+                          </button>
+                        </div>
+                      </div>
+                      <div class="game_of_month_box_image_box">
+                        <img
+                          src="media/capitals_img.webp"
+                          width="549"
+                          height="489"
+                          alt="capitals_img"
+                          class="game_of_month_box_img" />
+                      </div>
+                    </div>
+                    <span class="game_of_month_box_heading2"> wizards </span>
+                  </div>
+                  <!-- Second box -->
+                  <div class="scroll_box scroll_box_second">
+                    <div class="">
+                      <h2 class="heading_2"> GAMES OF THE MONTH </h2>
+                      <p>
+                        Follow the link to a full season lineup of upcoming
+                        Games of the Month!
+                      </p>
+                      <button class="btn btn_theme_danger_small">
+                        See Schedule
+                      </button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
+  </body>
 </html>
